# ColorSmallBallShell

./: CMakeLists.txt  base.h  base__main.cpp  icon.pptx
ColorSmallBall/Applications/: GameControler.cpp  GameControler.h  QtPrecompiled.h  SignalSource.cpp  SignalSource.h
ColorSmallBall/StartPage/: StartMenu.cpp  StartMenu.h  StartMenu.ui
ColorSmallBall/ToolWidgets/StackedWidgetShell/: StackedWidgetShell.cpp  StackedWidgetShell.h  StackedWidgetShell.ui
ColorSmallBall/WindowShell/: MainWindowShell.cpp  MainWindowShell.h  MainWindowShell.ui
